@@ -56,7 +56,6 @@ pc_luk_status_def: 300
 mob_luk_status_def: 300
 
 // Maximum resistance to status changes. (10000 = 100%)
-// NOTE: This is applied after cards and equipment, so inmunity cards are 
-// capped to this.
+// NOTE: Cards and equipment can go over this limit, so it only applies to natural resist.
 pc_max_status_def: 10000
 mob_max_status_def: 10000
